# agentic-forge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  INSTALL.md  Makefile  README.md  SECURITY.md  sister.manifest.json
.github/workflows/: canonical.yml  ci.yml  hardening.yml  install-test.yml  release.yml
crates/agentic-forge-cli/: Cargo.toml
crates/agentic-forge-cli/src/: main.rs
crates/agentic-forge-core/: Cargo.toml
crates/agentic-forge-core/benches/: cache_bench.rs  core_bench.rs
crates/agentic-forge-core/src/: lib.rs
crates/agentic-forge-core/src/bridges/: mod.rs
crates/agentic-forge-core/src/cache/: invalidation.rs  lru.rs  metrics.rs  mod.rs
crates/agentic-forge-core/src/engine/: mod.rs  query.rs  validator.rs  write.rs
crates/agentic-forge-core/src/format/: mod.rs
crates/agentic-forge-core/src/index/: mod.rs
crates/agentic-forge-core/src/inventions/: mod.rs  tier1_decomposition.rs  tier2_entity.rs  tier3_operation.rs  tier4_structure.rs  tier5_dependency.rs  tier6_blueprint.rs  tier7_integration.rs  tier8_test.rs
crates/agentic-forge-core/src/metrics/: audit.rs  conservation.rs  mod.rs  tokens.rs
crates/agentic-forge-core/src/query/: budget.rs  delta.rs  intent.rs  pagination.rs
crates/agentic-forge-core/src/security/: mod.rs
crates/agentic-forge-core/src/storage/: format.rs  mod.rs  store.rs
crates/agentic-forge-core/src/types/: blueprint.rs  error.rs  ids.rs  intent.rs  mod.rs
crates/agentic-forge-core/src/validation/: mod.rs
crates/agentic-forge-core/tests/: conservation.rs  edge_cases.rs  stress.rs
crates/agentic-forge-ffi/: Cargo.toml
crates/agentic-forge-ffi/src/: lib.rs
crates/agentic-forge-mcp/: Cargo.toml
crates/agentic-forge-mcp/src/: lib.rs  main.rs
crates/agentic-forge-mcp/src/config/: mod.rs
crates/agentic-forge-mcp/src/prompts/: mod.rs
crates/agentic-forge-mcp/src/protocol/: compact.rs  mod.rs
crates/agentic-forge-mcp/src/session/: mod.rs
crates/agentic-forge-mcp/src/streaming/: mod.rs
crates/agentic-forge-mcp/src/tools/: mod.rs  registry.rs
crates/agentic-forge-mcp/src/transport/: mod.rs
crates/agentic-forge-mcp/src/types/: capabilities.rs  error.rs  message.rs  mod.rs  notification.rs  request.rs  response.rs
crates/agentic-forge-mcp/tests/: phase1_types.rs  phase2_protocol.rs  phase3_tools.rs  phase4_edge_cases.rs  phase5_stress.rs
docs/public/: LIMITATIONS.md  api-reference.md  architecture.md  benchmarks.md  cli-reference.md  command-surface.md  concepts.md  configuration.md  experience-with-vs-without.md  faq.md  ffi-reference.md  initial-problem-coverage.md  installation.md  integration-guide.md  mcp-prompts.md  mcp-resources.md  mcp-tools.md  playbooks-agent-integration.md  primary-problem-coverage.md  quickstart.md  runtime-install-sync.md  sister.manifest.json  troubleshooting.md
npm/: Cargo.toml
npm/wasm/: Cargo.toml
paper/paper-i-forge/: paper-i.tex  references.bib
python/: pyproject.toml
scripts/: bench.sh  check-canonical-consistency.sh  check-canonical-sister.sh  check-command-surface.sh  check-install-commands.sh  check-mcp-consolidation.sh  check-runtime-hardening.sh  install.sh  release.sh  test-primary-problems.sh
