[package]
name = "agentic-forge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI for AgenticForge blueprint engine"
homepage = "https://agentralabs.tech"

[[bin]]
name = "aforge"
path = "src/main.rs"

[dependencies]
agentic-forge-core = { workspace = true }
agentic-forge-mcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
