[package]
name = "agentic-forge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Blueprint engine for complete project architecture before code generation"
homepage = "https://agentralabs.tech"
keywords = ["ai", "agent", "forge", "blueprint", "architecture"]
categories = ["data-structures", "command-line-utilities"]

[lib]
name = "agentic_forge_core"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["format"]
format = []
ffi = ["format"]

[dependencies]
agentic-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "core_bench"
harness = false

[[bench]]
name = "cache_bench"
harness = false
