[package]
name = "agentic-forge-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP server for AgenticForge blueprint engine"
homepage = "https://agentralabs.tech"

[features]
default = ["stdio"]
stdio = []

[[bin]]
name = "agentic-forge-mcp"
path = "src/main.rs"

[dependencies]
agentic-forge-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
